--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -169,11 +169,6 @@ on post-fs-data
     mkdir /data/misc/hcid 0770 bluetooth bluetooth
     mkdir /data/misc/psdata
 
-    # give system access to ril_config
-    copy -u /system/etc/ril_config /data/misc/ril_config
-    chmod 0660 /data/misc/ril_config
-    chown root radio /data/misc/ril_config
-
     # Create directory for STE OMX debug logs
     mkdir /data/ste-debug 0777 root root
 
@@ -238,6 +233,10 @@ on early-boot
 
     # STE: Launch core services in case charging mode is entered
     start watchdog-kicker
+
+    # init Phonet and shrm net device required for Phonet communication with Modem
+    ifup shrm0
+    ifup upnlink0
 
     # STE: Prepare modem
     class_start modem-u8500
@@ -428,16 +427,6 @@ on property:sys.perf.profile=2
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor performance
 
-# init shrm net device required for Phonet communication with Modem
-service shrm-netdev /system/bin/ifconfig shrm0 up
-    class modem-u8500
-    oneshot
-
-# init Phonet net device required for Phonet communication with Modem
-service phonet-netdev /system/bin/ifconfig upnlink0 up
-    class main
-    oneshot
-
 #STE: Start the Modem Storage Agent (MSA) service
 service modem /system/bin/sh /system/etc/ste_modem.sh
     class modem-u8500
@@ -563,12 +552,6 @@ service iprenew_bnep0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
-service dhcpcd_fix /system/bin/rm /data/misc/dhcp/*
-    user root
-    group root system dhcp
-    disabled
-    oneshot
-
 # Regulatory domain handling
 service initial_regdom /system/bin/iw reg set US
     disabled
@@ -591,7 +574,7 @@ on property:init.svc.wpa_supplicant=stopped
 
 on property:init.svc.dhcpcd_wlan0=stopped
     stop dhcpcd
-    start dhcpcd_fix
+    exec /system/bin/rm -r /data/misc/dhcp/
 
 on property:dhcp.wlan0.result=ok
     exec /system/bin/iw phy phy0 wowlan enable any
