--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -237,6 +237,8 @@ on post-fs-data
     chown radio radio /dev/rpc
     chmod 0600 /dev/rpc
 
+    setprop vold.post_fs_data_done 1
+
 on early-boot
 
     # Start the offline charging
