--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -87,9 +87,7 @@ on fs
 
     setprop ro.crypto.state unsupported
 
-#    wait /dev/block/mmcblk0p14
-#    mkdir /sde
-#    mount vfat /dev/block/mmcblk0p14 /sde  rw wait
+    write /sys/block/zram0/comp_algorithm lz4
 
     mount_all fstab.st-ericsson
     swapon_all fstab.st-ericsson
