Combine init.d scripts and install_wlan
Change-Id: I18f9f3568406c2fac9fc0531cedf6316ac0cae9a

--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -221,7 +221,9 @@ on early-boot
     # STE: Launch core services in case charging mode is entered
     start watchdog-kicker
 
-    # init Phonet and shrm net device required for Phonet communication with Modem
+    start ste_setup
+
+    # Init phonet and shrm net device required for Phonet communication with Modem
     ifup shrm0
     ifup upnlink0
 
@@ -339,8 +341,6 @@ on boot
     chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
     
     start init_ste-cg2900
-    
-    start init_ste-cw1200
 
     # Set timeout value for rmnet stats.
     write /sys/devices/virtual/net/rmnet0/timeout_suspend 5000000
@@ -408,11 +408,6 @@ service admsrv /system/bin/admsrv
 service init_ste-cg2900 /system/bin/hciattach -a 23 -n -s 115200 /dev/ttyAMA0 cg2900 115200 flow
     user bluetooth
     group bluetooth net_bt_admin system net_bt_stack
-    disabled
-    oneshot
-    
-# Install Wireless drivers
-service init_ste-cw1200 /system/bin/install_wlan.sh
     disabled
     oneshot
 
@@ -540,6 +535,11 @@ service batcap /system/bin/batcap
 service hw_config /system/bin/sh /system/etc/hw_config.sh
     class main
     user root
+    oneshot
+
+# Ste setup
+service ste_setup /system/bin/ste_setup.sh
+    disabled
     oneshot
 
 # Start suntrold
