--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -430,8 +430,8 @@ on property:sys.perf.profile=1
 on property:sys.perf.profile=2
     write /sys/devices/system/cpu/cpu0/online 1
     write /sys/devices/system/cpu/cpu1/online 1
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor Lionheart
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor Lionheart
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor performance
 
 # init shrm net device required for Phonet communication with Modem
 service shrm-netdev /system/bin/ifconfig shrm0 up
