--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -488,19 +488,7 @@ service wpa_supplicant /system/bin/wpa_supplicant \
     disabled
     oneshot
 
-service p2p_supplicant /system/bin/wpa_supplicant \
-    -Dnl80211 \
-    -iwlan0 \
-    -c/data/misc/wifi/wpa_supplicant.conf \
-    -e/data/misc/wifi/entropy.bin \
-    -g@android:wpa_wlan0
-    class main
-    group wifi inet
-    socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
-    oneshot
-
-service hostapd_bin /system/bin/hostapd -d /data/misc/wifi/hostapd.conf
+service hostapd /system/bin/hostapd -d /data/misc/wifi/hostapd.conf
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
@@ -512,23 +500,12 @@ service dhcpcd_wlan0 /system/bin/dhcpcd -aABdKL -t 30
     disabled
     oneshot
 
-service dhcpcd_p2p /system/bin/dhcpcd -aABdKL -t 30
-    class main
-    group dhcp
-    disabled
-    oneshot
-
 service dhcpcd_bnep0 /system/bin/dhcpcd -ABKL
     class main
     disabled
     oneshot
 
 service iprenew_wlan0 /system/bin/dhcpcd -n
-    class main
-    disabled
-    oneshot
-
-service iprenew_p2p /system/bin/dhcpcd -n
     class main
     disabled
     oneshot
@@ -552,9 +529,6 @@ on property:wlan.driver.status=ok
 on property:wlan.driver.status=unloaded
     write /sys/class/rfkill/rfkill0/state 0
 
-on property:init.svc.p2p_supplicant=stopped
-    start initial_regdom
-
 on property:init.svc.wpa_supplicant=stopped
     start initial_regdom
 
@@ -566,7 +540,7 @@ on property:dhcp.wlan0.result=ok
     exec /system/bin/iw phy phy0 wowlan enable any
 
 # delete tethered interface and bring down wlan0
-on property:init.svc.hostapd_bin=stopped
+on property:init.svc.hostapd=stopped
     exec /system/bin/iw dev mon.wlan0 del
     exec /system/bin/netcfg wlan0 down
 
