--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -388,10 +388,13 @@ on boot
     # STE: Enable wide-band speech for Bluetooth
     setprop bt.hfp.wideband 1
 
-    # Kernel Samepage Merging (KSM)
+    # KSM parameters
+    write /sys/kernel/mm/ksm/pages_to_scan 256
+    write /sys/kernel/mm/ksm/sleep_millisecs 1500
+    write /sys/kernel/mm/ksm/deferred_timer 1
     write /sys/kernel/mm/ksm/run 1
 
-    # Read only 1 page at a time
+    # Swap parameters
     write /proc/sys/vm/page-cluster 0
 
 # CM Performance Profiles
