--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -571,7 +571,7 @@ on property:init.svc.wpa_supplicant=stopped
 
 on property:init.svc.dhcpcd_wlan0=stopped
     stop dhcpcd
-    exec /system/bin/rm /data/misc/dhcp/*
+    exec /system/bin/rm -r /data/misc/dhcp/
 
 on property:dhcp.wlan0.result=ok
     exec /system/bin/iw phy phy0 wowlan enable any
